--- a/src/app/business/pages/advisory-tracking/advisory-tracking.component.html
+++ b/src/app/business/pages/advisory-tracking/advisory-tracking.component.html
@@ -601,6 +601,7 @@
                 ></app-task-list>
                 <div class="ml-2 mr-2 separator"></div>
                 <app-file-list
+                    #fileList
                     class="w-full"
                     [module]="module"
                     [id]="advisorySelected.id"
